--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "husky": "^7.0.4",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
