--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.19.3",
+    "axios": "^0.26.1",
     "jwt-decode": "^3.1.2",
     "less": "^4.1.2",
+    "rc-virtual-list": "^3.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.2.2",
     "socket.io": "^4.4.1"
   },
